Fixed a bug with z - indexing
The issue was I used the z-index on the flexbox which is not a static position making the z-index useless. This would sometimes cause some of the content text to appear above the navbar. To fix this I simply put the z-indexing to the parent of the flexbox

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,15 +1,26 @@
+.navbar {
+  position: fixed;
+  left: 0;
+  width: 100%;
+  height: var(--nav-height);
+  background: var(--nav-bg);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
+  backdrop-filter: saturate(180%) blur(20px);
+  z-index: 100;
+}
+
 .navbar--wrapper {
   display: flex;
   justify-content: space-between;
   margin: auto;
   height: var(--nav-height);
   color: var(--nav-color);
-  z-index: 10000;
   max-width: 1000px !important;
 }
 
 .navbar--wrapper ul {
   width: 100%;
+  z-index: 100;
 }
 
 .navbar--wrapper li {
@@ -49,7 +60,7 @@
   height: var(--nav-height);
   display: flex;
   align-items: center;
-  z-index: 1000000000;
+  z-index: 100;
   top: calc(var(--nav-height) / 2);
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
@@ -70,21 +81,27 @@
   animation: show-navbar-search 0.2s forwards;
 }
 
-.mobile-nav--open {
+/* .mobile-nav--open {
+
+} */
+
+.mobile-nav {
+  position: fixed;
+  top: 0;
+  height: calc(var(--nav-height) + 4px);
+  z-index: 100;
+  color: white;
+  width: 100%;
+  background: var(--nav-bg);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
+  backdrop-filter: saturate(180%) blur(20px);
 }
 
 .mobile-nav--closed {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: calc(var(--nav-height) + 4px);
-  width: 100%;
   position: fixed;
-  background: var(--nav-bg);
-  color: white;
-
-  -webkit-backdrop-filter: saturate(180%) blur(20px);
-  backdrop-filter: saturate(180%) blur(20px);
 }
 
 .hamburger-wrapper {
@@ -113,7 +130,7 @@
   height: 100vh;
   background: black;
   color: var(--nav-color);
-  z-index: 10000000;
+  z-index: 100;
   display: flex;
   flex-direction: column;
   gap: 20px;
